--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
           },
           edges: {
             arrows: 'to',
-            font: { align: 'middle' }
+            font: { size: 10,  // Adjust this number to make edge label text smaller or larger
+              align: 'middle'
+            }
           },
           physics: {
             forceAtlas2Based: {
