--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </style>
 </head>
 <body>
-  <h2>Neo4j Graph Visualization</h2>
+  <h2>Innovations Team</h2>
   <div id="network"></div>
 
   <script>
